<resources>
    <string name="app_name">CreatorApp</string>
    <string name="textview1">Department</string>
    <string name="radio1">SIS</string>
    <string name="radio2">CS</string>
    <string name="radio3">BIO</string>
    <string name="button1">SUBMIT</string>
    <string name="textview2">Your current mood:Angry</string>
    <string name="avtarselect">select your avtar</string>
    <string name="profileName">Name</string>
    <string name="profileEmail">Email</string>
    <string name="profileDept">Department</string>
    <string name="mood">I am</string>
</resources>
